--- a/swap.html
+++ b/swap.html
@@ -13,7 +13,7 @@
     <div class="sidebars-container">
         <div class="lil_sidebar">
             <div class="icon mt-4" title="Dashboard">
-                <img style="width: 50px;" src="StackHub (1).png" alt="">
+                <img style="width: 50px;" src="imagens/StackHub (1).png" alt="">
             </div>
             <div class="icon" title="Projetos">
                 <i class="fas fa-folder"></i>
@@ -75,12 +75,41 @@
                 <div class="photo">
 
                 </div>
-                <div class="card-photo-half-1">
-
+                <div class="card-photo-half-1 d-flex justify-content-end">
+                    <button class="btn btn-dark more-button d-flex align-items-center justify-content-center mt-2 me-2"><i class="fa-solid fa-plus" style="font-size: 30px;"></i></button>
                 </div>
 
                 <div class="card-photo-half-2">
-
+                    <div style="height: 30%;"></div>
+                    <div class"d-flex">
+                        <div class="ms-2">
+                            <i class="fa-solid fa-circle" style="font-size: 10px;color: rgb(0, 208, 0);"></i>
+                            <strong><small style="color:white">online</small></strong>
+                        </div>
+                        <div class="ms-2 me-2 d-flex justify-content-between">
+                            <h2 class="name">Carlinhos, 22</h2>
+                            <strong><small style="color:white">junior</small></strong>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <div class="profisao ms-2 me-2">
+                                <h2 class="text-center">Dev Java</h2>
+                            </div>
+                        </div>
+                        <div class="d-flex justify-content-between align-items-baseline">
+                            <div class="infos mt-2 ms-2 me-2 d-flex align-items-center">
+                                <i class="fa-solid fa-tag fa-2xl ms-2"></i>
+                                <h2 class="text-center" style="font-size: 18px;">10 projetos finalizados</h2>
+                            </div>
+                            <div class="infos mt-2 ms-2 me-2 d-flex align-items-center">
+                                <h2 class="text-center" style="font-size: 18px;">10</h2>
+                            </div>
+                            <div class="infos mt-2 ms-2 me-2 d-flex align-items-center">
+                                <i class="fa-solid fa-tag fa-2xl ms-2"></i>
+                                <h2 class="text-center" style="font-size: 18px;">42 analises</h2>
+                            </div>
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
             <div class="card-choose d-flex align-items-center justify-content-between">
@@ -89,8 +118,8 @@
                 <button class="btn btn-dark choose-button"><i class="fa-solid fa-thumbs-up" style="font-size: 40px;"></i></button>
             </div>
         </div>
-        <div class="card ms-5" style="background-color: red;">
-
+        <div class="card ms-5" style="background-color: rgb(0, 0, 0);">
+            <h1 style="color: white;">Portifolio</h1>
         </div>
     </div>
 </body>
