--- a/swap.html
+++ b/swap.html
@@ -1,22 +1,32 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="swap.css">
+    <link rel="stylesheet" href="css/swap.css">
     <title>Stack Hub</title>
 </head>
 <body>
+    <div id="centralMessage" class="central-message"></div>
     <div class="sidebars-container">
         <div class="lil_sidebar">
             <div class="icon mt-4" title="Dashboard">
-                <img style="width: 50px;" src="StackHub (1).png" alt="">
+                <img style="width: 50px;" src="imagens/StackHub (1).png" alt="">
+            </div>
+            <div class="icon" title="mensagem" id="conversa">
+                <i class="fas fa-comments"></i>
+            </div>
+            <div class="icon" title="caixa de entrada">
+                <i class="fas fa-envelope"></i>
             </div>
             <div class="icon" title="Projetos">
                 <i class="fas fa-folder"></i>
+            </div>
+            <div class="icon" title="tarefas">
+                <i class="fas fa-tasks"></i>
             </div>
             <div class="icon" title="Equipes">
                 <i class="fas fa-users"></i>
@@ -24,74 +34,124 @@
             <div class="icon" title="Calendário">
                 <i class="fas fa-calendar"></i>
             </div>
+            <div class="icon" title="Perfil" style="margin-top: auto;">
+                <i class="fas fa-circle-user"></i>
+            </div>
             <div class="icon" title="Configurações">
                 <i class="fas fa-cog"></i>
+            </div>
+            <div class="icon" title="Configurações">
+                <i class="fas fa-question-circle"></i>
             </div>
         </div>
         
         <div class="sidebar">
             <ul class="nav flex-column mt-4">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <i class="fas fa-project-diagram"></i> Projetos
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <i class="fas fa-tasks"></i> Tarefas
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <i class="fas fa-users"></i> Equipes
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <i class="fas fa-file-alt"></i> Documentos
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <i class="fas fa-calendar"></i> Calendário
-                    </a>
-                </li>
-                <li class="nav-item mt-4">
-                    <a class="nav-link" href="#">
-                        <i class="fas fa-cog"></i> Configurações
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <i class="fas fa-question-circle"></i> Ajuda
-                    </a>
-                </li>
+                <a href="chat.html" style="text-decoration: none;">
+                    <li class="nav-item nav-link d-flex">
+                        <img src="imagens/perfil.jpg" class="rounded-circle ms-2" style="width: 35px;height: 35px;" alt="">
+                        <div class="d-flex w-100 justify-content-between align-items-center">
+                            <h6 class="ms-2 mt-1">Abner</h6>
+                            <strong class="ms-2"><small style="color:white">🟢online</small></strong>
+                        </div>
+                    </li>
+                </a>
+
+                <a href="chat.html" style="text-decoration: none;">
+                    <li class="nav-item nav-link d-flex">  
+                        <img src="imagens/perfil.jpg" class="rounded-circle ms-2" style="width: 35px;height: 35px;" alt="">
+                        <div class="d-flex w-100 justify-content-between align-items-center">
+                            <h6 class="ms-2 mt-1">Diogo</h6>
+                            <strong class="ms-2"><small style="color:white">🟢online</small></strong>
+                        </div>
+                    </li>
+                </a>
+
+                <a href="chat.html" style="text-decoration: none;">
+                    <li class="nav-item nav-link d-flex">  
+                        <img src="imagens/perfil.jpg" class="rounded-circle ms-2" style="width: 35px;height: 35px;" alt="">
+                        <div class="d-flex w-100 justify-content-between align-items-center">
+                            <h6 class="ms-2 mt-1">Thiago</h6>
+                            <strong class="ms-2"><small style="color:white">🔴offline</small></strong>
+                        </div>
+                    </li>
+                </a>                
             </ul>
         </div>
     </div>
+
     <div class="main-content d-flex justify-content-center align-items-center">
+        <!-- Card principal -->
         <div class="card">
-            <div class="card-photo">
-                <div class="photo">
-
-                </div>
-                <div class="card-photo-half-1">
-
+            <div class="card-photo" id="swipeCard" style="margin-left: auto;margin-right: auto;">
+                <div class="photo"></div>
+                <div class="card-photo-half-1 d-flex justify-content-end">
+                    <button class="btn btn-dark more-button d-flex align-items-center justify-content-center mt-2 me-2" id="togglePortfolio">
+                        <i class="fa-solid fa-plus" style="font-size: 30px;"></i>
+                    </button>
                 </div>
 
                 <div class="card-photo-half-2">
-
+                    <div style="height: 30%;"></div>
+                    <div>
+                        <div class="ms-2">
+                            <i class="fa-solid fa-circle" style="font-size: 10px;color: rgb(0, 208, 0);"></i>
+                            <strong><small style="color:white">online</small></strong>
+                        </div>
+                        <div class="ms-2 me-2 d-flex justify-content-between">
+                            <h2 class="name">Carlinhos, 22</h2>
+                            <strong><small style="color:white">junior</small></strong>
+                        </div>
+                        <div class="d-flex justify-content-between">
+                            <div class="profisao ms-2 me-2"><h2 class="text-center">Dev Java</h2></div>
+                        </div>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="infos mt-2 ms-2 me-2 d-flex align-items-center">
+                                <i class="fa-solid fa-tag fa-2xl ms-2"></i>
+                                <h2 class="text-center ms-1" style="font-size: 18px;">10 projetos finalizados</h2>
+                            </div>
+                            <div class="infos mt-2 ms-2 me-2 d-flex justify-content-center align-items-center">
+                                <i class="fa-solid fa-star" style="color: yellow;"></i>
+                                <i class="fa-solid fa-star ms-1" style="color: yellow;"></i>
+                                <i class="fa-solid fa-star ms-1" style="color: yellow;"></i>
+                                <i class="fa-regular fa-star ms-1" style="color: yellow;"></i>
+                                <i class="fa-regular fa-star ms-1" style="color: yellow;"></i>
+                            </div>
+                            <div class="infos mt-2 ms-2 me-2 d-flex align-items-center">
+                                <i class="fa-solid fa-chart-simple fa-2xl ms-2"></i>
+                                <h2 class="text-center ms-1" style="font-size: 18px;">42 análises</h2>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="card-choose d-flex align-items-center justify-content-between">
-                <button class="btn btn-dark choose-button"><i class="fa-solid fa-xmark" style="font-size: 40px;"></i></button>
-                <button class="btn btn-dark choose-button"><i class="fa-solid fa-heart" style="font-size: 40px;"></i></button>
-                <button class="btn btn-dark choose-button"><i class="fa-solid fa-thumbs-up" style="font-size: 40px;"></i></button>
+
+            <!-- Botões de escolha -->
+            <div class="card-choose d-flex align-items-center justify-content-between" style="margin-left: auto;margin-right: auto;">
+                <button class="btn btn-dark choose-button" data-action="dislike">
+                    <i class="fa-solid fa-xmark" style="font-size: 40px;color: #ff6868;"></i>
+                </button>
+                <button class="btn btn-dark choose-button" data-action="superlike">
+                    <i class="fa-solid fa-heart" style="font-size: 40px;color: #ea60ff;"></i>
+                </button>
+                <button class="btn btn-dark choose-button" data-action="like">
+                    <i class="fa-solid fa-thumbs-up" style="font-size: 40px;color: #6ffffa;"></i>
+                </button>
             </div>
         </div>
-        <div class="card ms-5" style="background-color: red;">
 
+        <!-- Card Portfólio (oculto inicialmente) -->
+        <div class="card ms-5 portfolio-card" hidden>
+            <div class="d-flex align-items-center">
+                <button class="btn btn-dark more-button d-flex align-items-center justify-content-center" id="closePortfolio" style="width: 50px;height: 50px;">
+                    <i class="fa-solid fa-close" style="font-size: 20px;"></i>
+                </button>
+                <h1 class="text-center mt-2 ms-2">Portfólio</h1>
+            </div>
+            <p>Aqui vão os projetos do usuário...</p>
         </div>
     </div>
+    <div id="swipeMessage" class="swipe-message"></div>
 </body>
+<script src="js/swipe.js"></script>
 </html>
