Pagina de Projetos

--- a/cadastro.html
+++ b/cadastro.html
@@ -52,7 +52,7 @@
                     </div>
                     
                     <button class="login-btn">
-                        <i class="fas fa-rocket me-2"></i> Cadastrar
+              <i class="fas fa-rocket me-2"></i> <a href="swap.html" style="text-decoration: none; color: white;">Cadastrar</a>
                     </button>
                     
                     <div class="register-section">
