--- a/chat.html
+++ b/chat.html
@@ -13,7 +13,9 @@
     <div class="sidebars-container">
         <div class="lil_sidebar">
             <div class="icon mt-4" title="Dashboard">
+                <a href="/swap.html">
                 <img style="width: 50px;" src="imagens/StackHub (1).png" alt="">
+                </a>
             </div>
             <div class="icon" title="mensagem" id="conversa">
                 <i class="fas fa-comments"></i>
@@ -25,7 +27,7 @@
                 <i class="fas fa-folder"></i>
             </div>
             <div class="icon" title="tarefas">
-                <i class="fas fa-tasks"></i>
+                <a href="projetos.html" class="fas fa-tasks" style="text-decoration: none; color: white;"></a>
             </div>
             <div class="icon" title="Equipes">
                 <i class="fas fa-users"></i>
