--- a/login.html
+++ b/login.html
@@ -55,7 +55,7 @@
             </div>
             
             <button type="submit" class="login-btn">
-              <i class="fas fa-sign-in-alt me-2"></i> Entrar
+              <i class="fas fa-sign-in-alt me-2"></i> <a href="swap.html" style="text-decoration: none; color: white;">Entrar</a>
             </button>
 
             <div id="successMessage" class="alert alert-success mt-3 d-none">
@@ -90,6 +90,6 @@
   <!-- Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Seu JS -->
-  <script src="js/login.js"></script>
+  <script src=""></script>
 </body>
 </html>
