--- a/swap.html
+++ b/swap.html
@@ -26,7 +26,9 @@
                 <i class="fas fa-folder"></i>
             </div>
             <div class="icon" title="tarefas">
+                <a href="projetos.html" style="text-decoration: none; color: white;">
                 <i class="fas fa-tasks"></i>
+                </a>
             </div>
             <div class="icon" title="Equipes">
                 <i class="fas fa-users"></i>
