--- a/sidebar.html
+++ b/sidebar.html
@@ -6,10 +6,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="css/sidebar.css">
+    <link rel="stylesheet" href="css/swap.css">
     <title>Stack Hub</title>
 </head>
 <body>
+    <div id="centralMessage" class="central-message"></div>
     <div class="sidebars-container">
         <div class="lil_sidebar">
             <div class="icon mt-4" title="Dashboard">
@@ -25,7 +26,9 @@
                 <i class="fas fa-folder"></i>
             </div>
             <div class="icon" title="tarefas">
+                <a href="projetos.html" style="text-decoration: none; color: white;">
                 <i class="fas fa-tasks"></i>
+                </a>
             </div>
             <div class="icon" title="Equipes">
                 <i class="fas fa-users"></i>
@@ -46,27 +49,35 @@
         
         <div class="sidebar">
             <ul class="nav flex-column mt-4">
-                <li class="nav-item nav-link d-flex">  
-                    <img src="imagens/perfil.jpg" class="rounded-circle ms-2" style="width: 35px;height: 35px;" alt="">
-                    <div class="d-flex w-100 justify-content-between align-items-center">
-                        <h6 class="ms-2 mt-1">Abner</h6>
-                        <strong class="ms-2"><small style="color:white">🟢online</small></strong>
-                    </div>
-                </li>
-                <li class="nav-item nav-link d-flex">  
-                    <img src="imagens/perfil.jpg" class="rounded-circle ms-2" style="width: 35px;height: 35px;" alt="">
-                    <div class="d-flex w-100 justify-content-between align-items-center">
-                        <h6 class="ms-2 mt-1">Diogo</h6>
-                        <strong class="ms-2"><small style="color:white">🟢online</small></strong>
-                    </div>
-                </li>
-                <li class="nav-item nav-link d-flex">  
-                    <img src="imagens/perfil.jpg" class="rounded-circle ms-2" style="width: 35px;height: 35px;" alt="">
-                    <div class="d-flex w-100 justify-content-between align-items-center">
-                        <h6 class="ms-2 mt-1">Thiago</h6>
-                        <strong class="ms-2"><small style="color:white">🔴offline</small></strong>
-                    </div>
-                </li>                
+                <a href="chat.html" style="text-decoration: none;">
+                    <li class="nav-item nav-link d-flex">
+                        <img src="imagens/perfil.jpg" class="rounded-circle ms-2" style="width: 35px;height: 35px;" alt="">
+                        <div class="d-flex w-100 justify-content-between align-items-center">
+                            <h6 class="ms-2 mt-1">Abner</h6>
+                            <strong class="ms-2"><small style="color:white">🟢online</small></strong>
+                        </div>
+                    </li>
+                </a>
+
+                <a href="chat.html" style="text-decoration: none;">
+                    <li class="nav-item nav-link d-flex">  
+                        <img src="imagens/perfil.jpg" class="rounded-circle ms-2" style="width: 35px;height: 35px;" alt="">
+                        <div class="d-flex w-100 justify-content-between align-items-center">
+                            <h6 class="ms-2 mt-1">Diogo</h6>
+                            <strong class="ms-2"><small style="color:white">🟢online</small></strong>
+                        </div>
+                    </li>
+                </a>
+
+                <a href="chat.html" style="text-decoration: none;">
+                    <li class="nav-item nav-link d-flex">  
+                        <img src="imagens/perfil.jpg" class="rounded-circle ms-2" style="width: 35px;height: 35px;" alt="">
+                        <div class="d-flex w-100 justify-content-between align-items-center">
+                            <h6 class="ms-2 mt-1">Thiago</h6>
+                            <strong class="ms-2"><small style="color:white">🔴offline</small></strong>
+                        </div>
+                    </li>
+                </a>                
             </ul>
         </div>
     </div>
