--- a/home.html
+++ b/home.html
@@ -3,24 +3,62 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>StackHub - Home</title>
+  <title>StackHub</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <link rel="stylesheet" href="css/sidebar.css">
+  <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
 
   <div id="sidebar-container"></div>
 
+    <div class="main-content d-flex flex-column justify-content-center align-items-center mt-4">
+       <div class="d-flex align-items-start p-3 rounded text-white" style="max-width: 400px; margin-left: auto;">
+        <!-- Foto de perfil -->
+        <svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="currentColor" class="bi bi-person-circle me-4" viewBox="0 0 16 16">
+          <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+          <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+        </svg>
+       
+        <!-- Textos -->
+        <div>
+          <div class="fw-bold">Boas-vindas, Cleide</div>
+          <div class="text-white small">Nome da empresa/função</div>
+        </div>
+      </div>
 
-  <div class=" d-flex justify-content-center align-items-center">
-    <h1>Seja Bem Vindo</h1>
-  </div>
+        <div class="card p-4 shadow-lg rounded-lg mb-4 mt-4">
+          <div class="d-flex justify-content-center mb-3">
+            <div class="icon-container rounded-circle p-3">
+              <svg xmlns="http://www.w3.org/2000/svg" width="90" height="90" fill="currentColor" class="bi bi-exclamation-triangle text-white" viewBox="0 0 16 16">
+                <path d="M7.938 2.016A.13.13 0 0 1 8.002 2a.13.13 0 0 1 .063.016.15.15 0 0 1 .054.057l6.857 11.667c.036.06.035.124.002.183a.2.2 0 0 1-.054.06.1.1 0 0 1-.066.017H1.146a.1.1 0 0 1-.066-.017.2.2 0 0 1-.054-.06.18.18 0 0 1 .002-.183L7.884 2.073a.15.15 0 0 1 .054-.057m1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767z"/>
+                <path d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0M7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0z"/>
+              </svg>
+            </div>
+          </div>
+          <p class="text-center text-white mb-4 mt-4"></p>
+          <p class="text-center text-white mb-4 mt-4">
+            Você precisa finalizar o seu cadastro para poder continuar e desfrutar a nossa plataforma, tendo acesso a todo o conteúdo.
+          </p>
+          <button class="btn btn-success btn-lg w-100 mt-4">FINALIZAR CADASTRO!</button>
+        </div>
 
- 
+          <div class="card p-4 shadow-lg rounded-lg mt-4">
+          <div class="d-flex justify-content-center mb-3">
+            <p class="text-center text-white mb-4 mt-4">ESTÁ COM ALGUMA DÚVIDA?</p>
+          </div>
+          <p class="text-center text-white mb-4 mt-4">
+            Conheça mais sobre todas as funcionalidades do nosso sistema, como usar, um pouco da empresa e todos os membros da equipe.
+          </p>
+          <button class="btn btn-success btn-lg w-100 mt-4">SAIBA MAIS!</button>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-
- 
   <script src="js/sidebar.js"></script>
 </body>
 </html>
