--- a/projetos.html
+++ b/projetos.html
@@ -58,70 +58,7 @@
 </style>
 
 <body>
-    <div class="sidebars-container">
-        <div class="lil_sidebar">
-            <div class="icon mt-4" title="Dashboard">
-                <a href="swap.html">
-                <img style="width: 50px;" src="imagens/StackHub (1).png" alt="">
-                </a>
-            </div>
-            <div class="icon" title="mensagem" id="conversa">
-                <i class="fas fa-comments"></i>
-            </div>
-            <div class="icon" title="caixa de entrada">
-                <i class="fas fa-envelope"></i>
-            </div>
-            <div class="icon" title="Projetos">
-                <i class="fas fa-folder"></i>
-            </div>
-            <div class="icon" title="tarefas">
-                <i class="fas fa-tasks"></i>
-            </div>
-            <div class="icon" title="Equipes">
-                <i class="fas fa-users"></i>
-            </div>
-            <div class="icon" title="CalendÃ¡rio">
-                <i class="fas fa-calendar"></i>
-            </div>
-            <div class="icon" title="Perfil" style="margin-top: auto;">
-                <i class="fas fa-circle-user"></i>
-            </div>
-            <div class="icon" title="ConfiguraÃ§Ãµes">
-                <i class="fas fa-cog"></i>
-            </div>
-            <div class="icon" title="ConfiguraÃ§Ãµes">
-                <i class="fas fa-question-circle"></i>
-            </div>
-        </div>
-
-        <div class="sidebar">
-            <ul class="nav flex-column mt-4">
-                <a href="chat.html" style="text-decoration: none;">
-                <li class="nav-item nav-link d-flex">
-                    <img src="imagens/perfil.jpg" class="rounded-circle ms-2" style="width: 35px;height: 35px;" alt="">
-                    <div class="d-flex w-100 justify-content-between align-items-center">
-                        <h6 class="ms-2 mt-1">Abner</h6>
-                        <strong class="ms-2"><small style="color:white">🟢online</small></strong>
-                    </div>
-                </li>
-                </a>
-                <li class="nav-item nav-link d-flex">
-                    <img src="imagens/perfil.jpg" class="rounded-circle ms-2" style="width: 35px;height: 35px;" alt="">
-                    <div class="d-flex w-100 justify-content-between align-items-center">
-                        <h6 class="ms-2 mt-1">Diogo</h6>
-                        <strong class="ms-2"><small style="color:white">🟢online</small></strong>
-                    </div>
-                </li>
-                <li class="nav-item nav-link d-flex">
-                    <img src="imagens/perfil.jpg" class="rounded-circle ms-2" style="width: 35px;height: 35px;" alt="">
-                    <div class="d-flex w-100 justify-content-between align-items-center">
-                        <h6 class="ms-2 mt-1">Thiago</h6>
-                        <strong class="ms-2"><small style="color:white">🔴offline</small></strong>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </div>
+      <div  id="sidebar-container"></div>
 
   <div class="main-content d-flex flex-column justify-content-start align-items-center mt-3 position-relative">
     <div class="dropdown w-100 mb-3" style="margin-left:115px;">
@@ -249,6 +186,7 @@
     
 
 </body>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="js/sidebar.js"></script>
 
 </html>
