--- a/cadastro.html
+++ b/cadastro.html
@@ -52,7 +52,7 @@
                     </div>
                     
                     <button class="login-btn">
-              <i class="fas fa-rocket me-2"></i> <a href="swap.html" style="text-decoration: none; color: white;">Cadastrar</a>
+              <i class="fas fa-rocket me-2"></i>Cadastrar
                     </button>
                     
                 <div class="register-section">
@@ -77,7 +77,13 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- SweetAlert2 -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <!-- Bootstrap -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Seu JS -->
+  <script src="js/cadastro.js"></script>
     <script>
   // Controlar animações de transição entre páginas - Versão para cadastro
   document.addEventListener('DOMContentLoaded', function() {
