--- a/cadastrodev.html
+++ b/cadastrodev.html
@@ -335,8 +335,9 @@ textarea::placeholder {
     </div>
 
     <div class="nome-cnpj-container">
-        <input type="text" name="apelido" placeholder="Nome" required>
-        <input type="text" name="cpf_cnpj" placeholder="CPF ou CNPJ" required>
+        <input id="nome" type="text" name="apelido" placeholder="Nome" required>
+        <input  id="cpf_cpnj"type="text" name="cpf_cnpj" placeholder="CPF ou CNPJ" required>
+        
     </div>
 
     <div class="nome-cnpj-container">
@@ -402,6 +403,8 @@ textarea::placeholder {
   <!-- Seu JS -->
 
     </div>
+
+  <script src="js/middleware.js"></script>
   <script src="js/cadastrodev.js"></script>
 </body>
 
