--- a/chat.html
+++ b/chat.html
@@ -165,16 +165,6 @@
 
 </body>
 <script src="js/chat.js"></script>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script>
-$(document).ready(function() {
-    const authDataString = sessionStorage.getItem('authData');
-
-    // Se o item não existir, significa que o usuário não está logado
-    if (!authDataString) {
-        // Redireciona imediatamente para a página de login
-        window.location.href = 'login.html';
-    }
-});
-</script>
+ <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+  <script src="js/middleware.js"></script>
 </html>
