--- a/loading.html
+++ b/loading.html
@@ -116,7 +116,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
         if (!token) {
             // Se não tiver token, volta para login
-            window.location.href = 'login.html';
+            window.location.href = 'welcome.html';
         } else {
             // Se estiver logado, vai para a página principal
             window.location.href = 'home.html'; // ou dashboard.html
@@ -125,16 +125,7 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 
   </script>
-  <script>
-$(document).ready(function() {
-    const authDataString = sessionStorage.getItem('authData');
-
-    // Se o item não existir, significa que o usuário não está logado
-    if (!authDataString) {
-        // Redireciona imediatamente para a página de login
-        window.location.href = 'login.html';
-    }
-});
-</script>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="js/middleware.js"></script>
 </body>
 </html>
