--- a/projetos.html
+++ b/projetos.html
@@ -178,23 +178,8 @@
         </ul>
     </div>
 </div>
-<script>
-$(document).ready(function() {
-    const authDataString = sessionStorage.getItem('authData');
-
-    // Se o item não existir, significa que o usuário não está logado
-    if (!authDataString) {
-        // Redireciona imediatamente para a página de login
-        window.location.href = 'login.html';
-    }
-});
-</script>
-
-   
-        
-
-    
-
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="js/middleware.js"></script>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="js/sidebar.js"></script>
