--- a/sidebar.html
+++ b/sidebar.html
@@ -94,24 +94,9 @@
 
 
 <script src="js/sidebar.js"></script>
+<script src="js/logout.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script>
-           $("#logoutBtn").on("click", function (e) {
-    e.preventDefault();
 
-    apiRequest('http://127.0.0.1:8000/api/logout', 'POST')
-        .done(function(response) {
-            // Remove token do storage
-            sessionStorage.removeItem('jwt');
-
-            // Redireciona para loading.html
-            window.location.href = 'loading.html';
-        })
-        .fail(function() {
-            sessionStorage.removeItem('jwt');
-            window.location.href = 'loading.html';
-        });
-});
 </script>
 
 
