--- a/slccategoria.html
+++ b/slccategoria.html
@@ -135,7 +135,8 @@
   <!-- Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Seu JS -->
-
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="js/middleware.js"></script>
 <script>
 $(document).ready(function() {
     // 1. Verifica se o usuário está autenticado
