--- a/editar_perfil.html
+++ b/editar_perfil.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="css/swap.css">
+    <link rel="stylesheet" href="css/editar_perfil.css">
     <title>Stack Hub</title>
 </head>
 <body>
@@ -86,9 +86,9 @@
         </div>
     </div>
 
-    <div class="main-content d-flex justify-content-center align-items-center">
+    <div class="main-content d-flex justify-content-end align-items-center">
         <!-- Card principal -->
-        <div class="card card-principal">
+        <div class="card card-principal  me-5">
             <div class="card-photo" id="swipeCard" style="margin-left: auto;margin-right: auto;">
                 <div class="photo"></div>
                 <div class="card-photo-half-1 d-flex justify-content-end">
@@ -146,22 +146,10 @@
                 </div>
             </div>
 
-            <!-- Botões de escolha -->
-            <div class="card-choose d-flex align-items-center justify-content-between" style="margin-left: auto;margin-right: auto;">
-                <button class="btn btn-dark choose-button dislike" data-action="dislike">   
-                    <i class="fa-solid fa-xmark" style="font-size: 40px;color: #ffffff;"></i>
-                </button>
-                <button class="btn btn-dark choose-button super-like" data-action="superlike">
-                    <i class="fa-solid fa-heart" style="font-size: 40px;color: #ffffff;"></i>
-                </button>
-                <button class="btn btn-dark choose-button like" data-action="like">
-                    <i class="fa-solid fa-thumbs-up" style="font-size: 40px;color: #ffffff;"></i>
-                </button>
-            </div>
         </div>
 
         <!-- Card Portfólio (oculto inicialmente) -->
-        <div class="card portfolio-card" hidden>
+        <div class="card me-5 portfolio-card" hidden>
             <div class="d-flex align-items-center">
                 <button class="btn btn-dark more-button d-flex align-items-center justify-content-center" id="closePortfolio" style="width: 50px;height: 50px;">
                     <i class="fa-solid fa-close" style="font-size: 20px;"></i>
@@ -173,7 +161,7 @@
     </div>
     <div id="swipeMessage" class="swipe-message"></div>
 </body>
-<script src="js/swipe.js"></script>
+<script src="js/editar_perfil.js"></script>
 
 
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
